[API灵活化]
添加了POST方法用于灵活生成